--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,5 +13,17 @@
   </head>
   <body>
     <h1>KhoaPham Training</h1>
+    <!-- Input button -->
+    <div id="div-sign-in">
+      <input type="text" placeholder="Username" id="txt-username">
+      <button id="btn-sign-up">Sign Up</button>
+    </div>
+    <ul id="ul-list-room">
+      <li>Android</li>
+      <li>iOs</li>
+      <li>React</li>
+      <li>Node</li>
+    </ul>
+    <!-- ul : react, node, ios, android -->
   </body>
 </html>
