--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,5 +43,9 @@
       <li>Node</li>
     </ul>
     <!-- ul : react, node, ios, android -->
+    <div id="div-chat">
+      <input type="text" placeholder="Message" id="txt-msg">
+      <button id="btn-send">Send</button>
+    </div>
   </body>
 </html>
